--- a/web/Dashboard/dashboard.html
+++ b/web/Dashboard/dashboard.html
@@ -14,8 +14,8 @@ Aplikasi Manajemen Pegawai
 <aside>
 <ul class="menu">
 <li><a href="dashboard.html" class="aktif">Dashboard</a></li>
-<li><a href="tabel.html" class="aktif">Data Pegawai</a></li>
-<li><a href="tabel.html" class="aktif">Data Jabatan</a></li>
+<li><a href="../Tabel/Tabel.html" class="aktif">Data Pegawai</a></li>
+<li><a href="../Tabel/Tabel.html" class="aktif">Data Jabatan</a></li>
 
 <li><a href="../Login/login.html" class="aktif">Keluar</a></li>
 </ul>
