--- a/web/Form/form.html
+++ b/web/Form/form.html
@@ -13,9 +13,9 @@ Aplikasi Manajemen Pegawai
 <div class="container">
 <aside>
 <ul class="menu">
-<li><a href="dashboard.html" class="aktif">Dashboard</a></li>
-<li><a href="tabel.html" class="aktif">Data Pegawai</a></li>
-<li><a href="tabel.html" class="aktif">Data Jabatan</a></li>
+<li><a href="../Dashboard/dashboard.html" class="aktif">Dashboard</a></li>
+<li><a href="../Tabel/Tabel.html" class="aktif">Data Pegawai</a></li>
+<li><a href="../Tabel/Tabel.html" class="aktif">Data Jabatan</a></li>
 
 <li><a href="../Login/login.html" class="aktif">Keluar</a></li>
 </ul>
