--- a/web/Tabel/Tabel.html
+++ b/web/Tabel/Tabel.html
@@ -13,7 +13,7 @@ Aplikasi Manajemen Pegawai
 <div class="container">
 <aside>
 <ul class="menu">
-<li><a href="dashboard.html" class="aktif">Dashboard</a></li>
+<li><a href="../Dashboard/dashboard.html" class="aktif">Dashboard</a></li>
 <li><a href="tabel.html" class="aktif">Data Pegawai</a></li>
 <li><a href="tabel.html" class="aktif">Data Jabatan</a></li>
 
@@ -22,7 +22,7 @@ Aplikasi Manajemen Pegawai
 </aside>
 <section class="main">
     <h2 class="judul">Data Pegawai</h2>
-    <a class="tombol" href="form.html">Tambah</a>
+    <a class="tombol" href="../Form/form.html">Tambah</a>
     <table class="table">
     <thead>
     <th class="no">No</th>
